--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^7.3.3",
     "@tailwindcss/vite": "^4.1.14",
     "framer-motion": "^12.23.22",
+    "i18next": "^25.6.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "swiper": "^12.0.2",
