--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.3",
     "@tailwindcss/vite": "^4.1.14",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.6.0",
     "lucide-react": "^0.544.0",
