--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.3",
     "@tailwindcss/vite": "^4.1.14",
     "emailjs-com": "^3.2.0",
+    "flag-icons": "^7.5.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.6.0",
     "lucide-react": "^0.544.0",
